--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </nav>
         <div class="text-box">
          <h1>Let's Create Moments "Together" </h1>
-         <p>Lovelybirds specializes in managing just these occasions; from small, intimate family events to large, spectacular celebrations</p>
+         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit <br>.dolor molestiae dolorum voluptatem facere rerum harum alias cupiditate consectetur ducimus, iusto animi cum neque repellat.</p>
          <a href="register2.html" class="hero-btn">REGISTER NOW</a>
         </div>
     </section>
@@ -63,7 +63,7 @@
 <!-- venues -->
 <section class="venues">
     <h1>our venues</h1>
-
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
     
     <div class="row">
           <div class="venues-colm">
